tests/Errors/Char.jack
class Char {
:   method m1 () {
    }
}
